force-app/main/default/objects/FS_FlavorChangeFileColumnDetails__mdt/FS_FlavorChangeFileColumnDetails__mdt.object-meta.xml
<CustomObject>
    <description>Flavor Change file upload  Columns that has the sequence of csv header&#39;s corresponding field API of respective sobject API  in Freestyle.</description>
    <label>FlavorChangeFileColumnDetails</label>
    <pluralLabel>FlavorChangeFileColumnDetails</pluralLabel>
</CustomObject>