force-app/main/default/objects/FS_FlavorChangeFileColumnDetails__mdt/fields/Column_Name_In_File__c.field-meta.xml
<CustomField>
    <fullName>Column_Name_In_File__c</fullName>
    <description>This field contains the corresponding column names in the file upload flavor change workbook</description>
    <label>Column Name In File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>