force-app/main/default/objects/FS_FlavorChangeFileColumnDetails__mdt/fields/FS_Column_Index__c.field-meta.xml
<CustomField>
    <fullName>FS_Column_Index__c</fullName>
    <label>Column Index</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>