force-app/main/default/objects/FS_FlavorChangeFileColumnDetails__mdt/fields/FS_Field_API__c.field-meta.xml
<CustomField>
    <fullName>FS_Field_API__c</fullName>
    <label>Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>